objects/LLC_BI__Fee__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Fee object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_To__c</fullName>
        <label>Payable To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_City__c</fullName>
        <label>Payee City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Country__c</fullName>
        <label>Payee Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_State__c</fullName>
        <label>Payee State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_Street__c</fullName>
        <label>Payee Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Zip_Code__c</fullName>
        <label>Payee Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>LLC_BI__Adjustments</fullName>
        <active>true</active>
        <description>Record Type for Adjustments Page Layout</description>
        <label>Adjustments</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Costs</fullName>
        <active>true</active>
        <description>Record Type for Costs Page Layout</description>
        <label>Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Fees</fullName>
        <active>true</active>
        <description>Record Type for Fees Page Layout</description>
        <label>Fees</label>
    </recordTypes>
</CustomObject>